--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -1,6 +1,7 @@
 .Table {
   text-align: center;
   table-layout: fixed;
+  max-width: 100%;
   width: 100%;
   border-collapse: collapse;
 }
